--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@
 # 除了 VUE_APP_* 变量之外，在你的应用代码中始终可用的还有两个特殊的变量：
 # NODE_ENV=production  #NODE_ENV - 会是 "development"、"production" 或 "test" 中的一个。具体的值取决于应用运行的模式
 # BASE_URL - 会和 vue.config.js 中的 publicPath 选项相符，即你的应用会部署到的基础路径
+# 页面使用 process.env.VUE_APP_SECRET
+
 
 # 公共配置
-VUE_APP_TITLE = 'HELLO,development'
+VUE_APP_API_URL = '/'
+
+
